# kbbi-python

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  LICENSE  Pipfile  README.md  kbbi.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: lint.yml  publish.yml  test.yml
kbbi/: __init__.py  kbbi.py
src/kbbi/: __init__.py  kbbi.py
tests/: _mock.py  buat_kasus.py  conftest.py  server.py  test_cli.py  test_kasus.py  test_kbbi.py  test_str.py  test_str_tanpa_contoh.py
tests/fixtures/: __init__.py  kbbi.py
tests/html/: entri.html
tests/html/Account/: Banned.html  Login.html
tests/html/Beranda/: BatasSehari.html  Error.html
tests/html/auth/entri/: air.html  alam.html  asalamualaikum.html  beruang.html  civitas academica.html  huk.html  idn45.html  kan.html  karbon dioksida.html  keratabasa.html  khayal.html  lah.html  lampir.html  makin.html  me-.html  menjadikan.html  ranah.html  roh.html  sage.html  semakin.html  tampak.html
tests/html/nonauth/entri/: air.html  alam.html  asalamualaikum.html  beruang.html  civitas academica.html  huk.html  idn45.html  kan.html  karbon dioksida.html  keratabasa.html  khayal.html  lah.html  lampir.html  makin.html  me-.html  menjadikan.html  ranah.html  roh.html  sage.html  semakin.html  tampak.html
tests/kasus/auth/serialisasi/: a.n..json  air.json  alam.json  asalamualaikum.json  beruang.json  bin.json  civitas academica.json  huk.json  idn45.json  kan.json  karbon dioksida.json  keratabasa.json  khayal.json  lah.json  lampir.json  makin.json  me-.json  menjadikan.json  quo vadis?.json  ranah.json  roh.json  sage.json  semakin.json  tampak.json
tests/kasus/auth/str/: air.txt  alam.txt  beruang.txt  huk.txt  me-.txt  quo vadis?.txt  semakin.txt  tampak.txt
tests/kasus/auth/str_tanpa_contoh/: air.txt  alam.txt  khayal.txt  lah.txt  roh.txt  tampak.txt
tests/kasus/nonauth/serialisasi/: a.n..json  air.json  asalamualaikum.json  beruang.json  bin.json  civitas academica.json  huk.json  idn45.json  (+7 more)
tests/kasus/serialisasi/: alam.json  karbon dioksida.json  khayal.json  lampir.json  makin.json  me-.json  menjadikan.json  quo vadis?.json  roh.json
tests/kasus/serialisasi-auth/: air.json  civitas academica.json  khayal.json  lah.json  lampir.json  makin.json  me-.json  menjadikan.json  quo vadis?.json  semakin.json
tests/kasus/str/: alam.txt  beruang.txt  khayal.txt  makin.txt  me-.txt  menjadikan.txt  ranah.txt  roh.txt  semakin.txt  tampak.txt
tests/kasus/str-auth/: air.txt  alam.txt  asalamualaikum.txt  bin.txt  kan.txt  keratabasa.txt  khayal.txt  lah.txt  makin.txt  menjadikan.txt  ranah.txt  roh.txt
tests/kasus/str_tanpa_contoh/: air.txt  khayal.txt  makin.txt  me-.txt  tampak.txt
tests/kasus/str_tanpa_contoh-auth/: air.txt  beruang.txt  bin.txt  civitas academica.txt  kan.txt  lampir.txt  makin.txt  menjadikan.txt  ranah.txt  sage.txt  tampak.txt
(+26 files in other folders)
