[metadata]
name = kbbi
version = 0.4.0
description = A module that scraps a page in the online Indonesian dictionary (KBBI).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/laymonage/kbbi-python
author = sage
author_email = laymonage@gmail.com
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: Indonesian
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Linguistic
keywords = kbbi kamus bahasa indonesia indonesian natural language scraper

[options]
packages = find:
package_dir = =src
install_requires =
    requests
    beautifulsoup4
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    kbbi=kbbi:main
    kbbi-autentikasi=kbbi:autentikasi
